package com.ecommerce.pedido.models.enums;

public enum FormaPagamento {
    CARTAO_DE_CREDITO,
    MAQUININHA,
    PIX,
    DINHEIRO;
}
