package com.ecommerce.pedido.models.enums;

public enum StatusTransacaoPix {
    AGUARDANDO,
    CONFIRMADO,
    EXPIROU
}
