package com.ecommerce.pedido.models.enums;

public enum TipoConsumo {
    COMER_AQUI,
    VIAGEM
}
